# NRF24

./: .gitignore  .gitmodules  CMakeLists.txt  Configuration.cpp  Configuration.h  Core.cpp  Core.h  Debug.cpp  Debug.h  Definitions.h  Doxyfile.in  Driver.cpp  Driver.h  NRF24.cpp  NRF24.h  NRF24L01P.h  README.md  Registers.h  instructions.md  intructions.md
BSP/: CMakeLists.txt
cmake/modules/: DocumentationTarget.cmake  FindNode.cmake
examples/: CMakeLists.txt
examples/BSP_example/: CMakeLists.txt
examples/NRF24_BasicRX/: CMakeLists.txt  NRF24_BasicRX.ino
examples/NRF24_BasicTX/: CMakeLists.txt  NRF24_BasicTX.ino
examples/NRF24_ChannelScanner/: NRF24_ChannelScanner.ino
examples/NRF24_ConstantCarrier/: NRF24_ConstantCarrier.ino
src/: CMakeLists.txt  NRF24lib.cpp
src/examples/: BSP_example.ino  NRF24lib_ChannelScanner.ino  NRF24lib_ConstantCarrier.ino
src/lib/: BSP.h  NRF24.cpp  NRF24.h  NRF24Debug.cpp  NRF24Debug.h  NRF24L01.h
