# Add BSP_example subdirectory to the build
add_subdirectory(BSP_example)

# Add NRF24_ChannelScanner subdirectory to the build
add_subdirectory(NRF24_ChannelScanner)

# Add NRF24_ConstantCarrier subdirectory to the build
add_subdirectory(NRF24_ConstantCarrier)

# Add NRF24_BasicTX subdirectory to the build
add_subdirectory(NRF24_BasicTX)

# Add NRF24_BasicRX subdirectory to the build
add_subdirectory(NRF24_BasicRX)